--- a/config/AppliedEnergistics2/AppliedEnergistics2.cfg
+++ b/config/AppliedEnergistics2/AppliedEnergistics2.cfg
@@ -296,6 +296,9 @@ modintegration {
 ##########################################################################################################
 
 orecamouflage {
+    # OreDictionary Names: dustEnder,dustEnderPearl
+    B:EnderDust=true
+
     # OreDictionary Names: dustGold
     B:GoldDust=true
 
