--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -1952,6 +1952,12 @@ biomesoplenty {
 botania {
     B:alchemyCatalyst=true
     B:alfheimPortal=false
+    B:altGrass=true
+    B:altGrass.1=true
+    B:altGrass.2=true
+    B:altGrass.3=true
+    B:altGrass.4=true
+    B:altGrass.5=true
     B:altar=false
     B:altar.1=false
     B:altar.2=false
@@ -2687,6 +2693,63 @@ carpentersblocks {
     B:blockCarpentersSlope.4=false
     B:blockCarpentersStairs=false
     B:blockCarpentersTorch=false
+}
+
+
+catwalkmod {
+    B:cagedLadder=false
+    B:scaffold=false
+}
+
+
+catwalks {
+    B:cagedLaddereastlit=false
+    B:cagedLaddereastlitnobottom=false
+    B:cagedLaddereastlitnobottomtape=false
+    B:cagedLaddereastlittape=false
+    B:cagedLaddereastunlit=false
+    B:cagedLaddereastunlitnobottom=false
+    B:cagedLaddereastunlitnobottomtape=false
+    B:cagedLaddereastunlittape=false
+    B:cagedLaddernorthlit=false
+    B:cagedLaddernorthlitnobottom=false
+    B:cagedLaddernorthlitnobottomtape=false
+    B:cagedLaddernorthlittape=false
+    B:cagedLaddernorthunlit=false
+    B:cagedLaddernorthunlitnobottom=false
+    B:cagedLaddernorthunlitnobottomtape=false
+    B:cagedLaddernorthunlittape=false
+    B:cagedLaddersouthlit=false
+    B:cagedLaddersouthlitnobottom=false
+    B:cagedLaddersouthlitnobottomtape=false
+    B:cagedLaddersouthlittape=false
+    B:cagedLaddersouthunlit=false
+    B:cagedLaddersouthunlitnobottom=false
+    B:cagedLaddersouthunlitnobottomtape=false
+    B:cagedLaddersouthunlittape=false
+    B:cagedLadderwestlit=false
+    B:cagedLadderwestlitnobottom=false
+    B:cagedLadderwestlitnobottomtape=false
+    B:cagedLadderwestlittape=false
+    B:cagedLadderwestunlit=false
+    B:cagedLadderwestunlitnobottom=false
+    B:cagedLadderwestunlitnobottomtape=false
+    B:cagedLadderwestunlittape=false
+    B:catwalklit=false
+    B:catwalklitnobottom=false
+    B:catwalklitnobottomtape=false
+    B:catwalklittape=false
+    B:catwalkunlit=false
+    B:catwalkunlitnobottom=false
+    B:catwalkunlitnobottomtape=false
+    B:catwalkunlittape=false
+    B:scaffold=false
+    B:scaffold.1=false
+    B:sturdyrail=false
+    B:sturdyrailactivator=false
+    B:sturdyraildetector=false
+    B:sturdyrailpowered=false
+    B:supportcolumn=false
 }
 
 
@@ -4270,6 +4333,7 @@ dcsapplemilk {
     B:defeatedcrowWoodBox.7=true
     B:defeatedcrowWoodBox.8=true
     B:defeatedcrowWoodBox.9=true
+    B:defeatedcrowadvProcessor=false
     B:defeatedcrowadvProsessor=false
     B:defeatedcrowalcoholCup=false
     B:defeatedcrowalcoholCup.1=false
@@ -4452,6 +4516,7 @@ dcsapplemilk {
     B:defeatedcrowmobDropBox.4=true
     B:defeatedcrowmushroomBox=false
     B:defeatedcrowmushroomBox.1=false
+    B:defeatedcrowprocessor=false
     B:defeatedcrowprosessor=false
     B:defeatedcrowredGel=false
     B:defeatedcrowrotaryDial=false
@@ -5883,6 +5948,7 @@ gardentrees {
     B:thinlog.1045=false
     B:thinlog.1046=false
     B:thinlog.1047=false
+    B:thinlog.1048=false
     B:thinlog.1088=false
     B:thinlog.1094=false
     B:thinlog.1098=false
@@ -5995,6 +6061,7 @@ gardentrees {
     B:thinlog.13333=false
     B:thinlog.13334=false
     B:thinlog.13335=false
+    B:thinlog.13336=false
     B:thinlog.13376=false
     B:thinlog.13382=false
     B:thinlog.13386=false
@@ -6166,6 +6233,7 @@ gardentrees {
     B:thinlog.5141=false
     B:thinlog.5142=false
     B:thinlog.5143=false
+    B:thinlog.5144=false
     B:thinlog.5184=false
     B:thinlog.5190=false
     B:thinlog.5194=false
@@ -6334,6 +6402,7 @@ gardentrees {
     B:thinlog.9237=false
     B:thinlog.9238=false
     B:thinlog.9239=false
+    B:thinlog.9240=false
     B:thinlog.9280=false
     B:thinlog.9286=false
     B:thinlog.9290=false
@@ -6416,6 +6485,7 @@ gardentrees {
     B:thinlogfence.1045=false
     B:thinlogfence.1046=false
     B:thinlogfence.1047=false
+    B:thinlogfence.1048=false
     B:thinlogfence.1088=false
     B:thinlogfence.1094=false
     B:thinlogfence.1098=false
@@ -6528,6 +6598,7 @@ gardentrees {
     B:thinlogfence.13333=false
     B:thinlogfence.13334=false
     B:thinlogfence.13335=false
+    B:thinlogfence.13336=false
     B:thinlogfence.13376=false
     B:thinlogfence.13382=false
     B:thinlogfence.13386=false
@@ -6699,6 +6770,7 @@ gardentrees {
     B:thinlogfence.5141=false
     B:thinlogfence.5142=false
     B:thinlogfence.5143=false
+    B:thinlogfence.5144=false
     B:thinlogfence.5184=false
     B:thinlogfence.5190=false
     B:thinlogfence.5194=false
@@ -6867,6 +6939,7 @@ gardentrees {
     B:thinlogfence.9237=false
     B:thinlogfence.9238=false
     B:thinlogfence.9239=false
+    B:thinlogfence.9240=false
     B:thinlogfence.9280=false
     B:thinlogfence.9286=false
     B:thinlogfence.9290=false
@@ -7342,6 +7415,11 @@ immersiveengineering {
     B:metalDecoration=false
     B:metalDecoration.1=false
     B:metalDecoration.10=false
+    B:metalDecoration.11=false
+    B:metalDecoration.12=false
+    B:metalDecoration.13=false
+    B:metalDecoration.14=false
+    B:metalDecoration.15=false
     B:metalDecoration.2=false
     B:metalDecoration.3=false
     B:metalDecoration.4=false
@@ -7372,6 +7450,8 @@ immersiveengineering {
     B:metalDevice2.5=false
     B:metalDevice2.6=false
     B:metalDevice2.7=false
+    B:metalDevice2.8=false
+    B:metalDevice2.9=false
     B:metalMultiblock=false
     B:metalMultiblock.2=false
     B:metalMultiblock.3=false
@@ -7706,9 +7786,29 @@ magicalcrops {
 
 
 malisisdoors {
+    B:acaciaFenceGate=false
+    B:birchFenceGate=false
     B:blockmixer=false
+    B:camoFenceGate=false
     B:carriagedoor=false
     B:curtain=false
+    B:curtainblack=false
+    B:curtainblue=false
+    B:curtainbrown=false
+    B:curtaincyan=false
+    B:curtaingray=false
+    B:curtaingreen=false
+    B:curtainlightblue=false
+    B:curtainlime=false
+    B:curtainmagenta=false
+    B:curtainorange=false
+    B:curtainpink=false
+    B:curtainpurple=false
+    B:curtainred=false
+    B:curtainsilver=false
+    B:curtainwhite=false
+    B:curtainyellow=false
+    B:darkOakFenceGate=false
     B:dooracacia=false
     B:doorbirch=false
     B:doordarkoak=false
@@ -7721,6 +7821,7 @@ malisisdoors {
     B:ironslidingdoor=false
     B:irontrapdoor=false
     B:jaildoor=false
+    B:jungleFenceGate=false
     B:laboratorydoor=false
     B:mixedblock=false
     B:null=false
@@ -7730,6 +7831,12 @@ malisisdoors {
     B:saloon=false
     B:shojidoor=false
     B:slidingtrapdoor=false
+    B:spruceFenceGate=false
+    B:trapdooracacia=false
+    B:trapdoorbirch=false
+    B:trapdoordarkoak=false
+    B:trapdoorjungle=false
+    B:trapdoorspruce=false
     B:vanishingblock=false
     B:vanishingblock.1=false
     B:vanishingblock.2=false
@@ -8668,7 +8775,22 @@ mo {
 }
 
 
+modelcitizens {
+    B:blockModelCitizen=false
+}
+
+
 moreplanet {
+    B:aliendirt=true
+    B:aliendirt.1=true
+    B:alienfarmland=false
+    B:alienglowstone=true
+    B:aliengrass=false
+    B:alienleaves.4=false
+    B:alienlog=true
+    B:alienplanks=true
+    B:aliensapling=false
+    B:alphereore=true
     B:ancientdarkdoorblock=false
     B:ancientdarkfencegate=false
     B:ancientdarkleaves=false
@@ -8751,6 +8873,19 @@ moreplanet {
     B:crystalsegment=false
     B:crystalwoodstairs=false
     B:cupblock=false
+    B:darkair=false
+    B:darkasteroidblock=false
+    B:darkasteroidblock.1=false
+    B:darkasteroidblock.10=false
+    B:darkasteroidblock.2=false
+    B:darkasteroidblock.3=false
+    B:darkasteroidblock.4=false
+    B:darkasteroidblock.5=false
+    B:darkasteroidblock.6=false
+    B:darkasteroidblock.7=false
+    B:darkasteroidblock.8=false
+    B:darkasteroidblock.9=false
+    B:darkasteroidquicksand=true
     B:deimosblock=false
     B:deimosblock.1=false
     B:deimosblock.2=false
@@ -8969,6 +9104,7 @@ moreplanet {
     B:halffronossandstoneslab.2=false
     B:halfvenussandstoneslab=false
     B:heliumblock=false
+    B:hugeskymushroom=true
     B:ichoriustorch=false
     B:icypoisoncrystal=false
     B:infectedcavernousvine=false
@@ -9260,6 +9396,8 @@ moreplanet {
     B:siriusobsidian=true
     B:siriusredstonelamp=true
     B:siriusredstonelampon=true
+    B:spacedecorationblock=true
+    B:spacedecorationblock.1=true
     B:spaceoysterclose=false
     B:spaceoysteropen=false
     B:spacepotatoblock=false
@@ -9285,6 +9423,38 @@ moreplanet {
     B:teacreamlayer=false
     B:teacup=false
     B:teafluid=false
+    B:tintedglass=false
+    B:tintedglass.1=false
+    B:tintedglass.10=false
+    B:tintedglass.11=false
+    B:tintedglass.12=false
+    B:tintedglass.13=false
+    B:tintedglass.14=false
+    B:tintedglass.15=false
+    B:tintedglass.2=false
+    B:tintedglass.3=false
+    B:tintedglass.4=false
+    B:tintedglass.5=false
+    B:tintedglass.6=false
+    B:tintedglass.7=false
+    B:tintedglass.8=false
+    B:tintedglass.9=false
+    B:tintedglasspane=false
+    B:tintedglasspane.1=false
+    B:tintedglasspane.10=false
+    B:tintedglasspane.11=false
+    B:tintedglasspane.12=false
+    B:tintedglasspane.13=false
+    B:tintedglasspane.14=false
+    B:tintedglasspane.15=false
+    B:tintedglasspane.2=false
+    B:tintedglasspane.3=false
+    B:tintedglasspane.4=false
+    B:tintedglasspane.5=false
+    B:tintedglasspane.6=false
+    B:tintedglasspane.7=false
+    B:tintedglasspane.8=false
+    B:tintedglasspane.9=false
     B:ultravioletsolarpanel=false
     B:uraniumbomb=true
     B:uraniumwaste=false
@@ -10305,8 +10475,19 @@ plantmegapack {
 }
 
 
+playerrugs {
+    B:playerRug=false
+}
+
+
 portalgun {
     B:PortalBlockPortal=false
+}
+
+
+powersuits {
+    B:tileluxCapacitor=false
+    B:tiletinkerTable=false
 }
 
 
@@ -10897,6 +11078,8 @@ rftools {
     B:matterReceiverBlock=false
     B:matterTransmitterBlock=false
     B:modularStorageBlock=false
+    B:noTickInvisibleShieldBlock=false
+    B:noTickolidShieldBlock=false
     B:pearlInjectorBlock=false
     B:proxyBlock=false
     B:redstoneReceiverBlock=false
@@ -10912,7 +11095,11 @@ rftools {
     B:shieldBlock=false
     B:shieldBlock2=false
     B:shieldBlock3=false
+    B:shieldBlock4=false
     B:shieldTemplateBlock=false
+    B:shieldTemplateBlock.1=false
+    B:shieldTemplateBlock.2=false
+    B:shieldTemplateBlock.3=false
     B:simpleDialerBlock=false
     B:solidShieldBlock=false
     B:spaceChamberBlock=false
@@ -10971,6 +11158,11 @@ rotarycraft {
 simpleachievements {
     B:saachievementStand=false
     B:sadecorationBlock=true
+}
+
+
+stacksonstacks {
+    B:ingotPile=false
 }
 
 
@@ -11096,6 +11288,12 @@ storagedrawers {
     B:trim.3=true
     B:trim.4=true
     B:trim.5=true
+    B:trimSort=false
+    B:trimSort.1=false
+    B:trimSort.2=false
+    B:trimSort.3=false
+    B:trimSort.4=false
+    B:trimSort.5=false
 }
 
 
