--- a/config/IguanaTinkerTweaks/ToolDefaults.cfg
+++ b/config/IguanaTinkerTweaks/ToolDefaults.cfg
@@ -120,6 +120,15 @@ botania {
 }
 
 
+catwalks {
+
+    blowtorch {
+        I:wrench=-1
+    }
+
+}
+
+
 chromaticraft {
 
     chromaticraft_item_oresilk {
@@ -557,6 +566,18 @@ moreplanet {
 
     quontonium_spade {
         I:shovel=6
+    }
+
+    xeonium_shovel {
+        I:shovel=6
+    }
+
+    xeonium_axe {
+        I:axe=6
+    }
+
+    xeonium_pickaxe {
+        I:pickaxe=6
     }
 
 }
