--- a/config/LaunchGui.cfg
+++ b/config/LaunchGui.cfg
@@ -14,7 +14,7 @@ global {
     S:modpackName=Revolution
 
     # The current version of your modpack [default: 1.7.10-2.0-18]
-    S:modpackVersion=1.7.10-1.4.0.0
+    S:modpackVersion=1.4.0.0
 }
 
 
