--- a/config/MorePlanet's/core.cfg
+++ b/config/MorePlanet's/core.cfg
@@ -3,6 +3,7 @@
 biomes {
     I:"Candy Land (Fronos Biome)"=248
     I:"Coconut Forest (Fronos Biome)"=224
+    I:"Dark Asteroids Biome"=213
     I:"Deimos Biome"=210
     I:"Diona Biome"=220
     I:"Golden Field (Fronos Biome)"=244
@@ -12,6 +13,7 @@ biomes {
     I:"Koentus Biome"=223
     I:"Maple Forest (Fronos Biome)"=246
     I:"Mercury Biome"=240
+    I:"More Planets Space Station Biome"=130
     I:"Nibiru Biome"=222
     I:"Phobos Biome"=211
     I:"Pluto Biome"=242
@@ -23,34 +25,41 @@ biomes {
 
 
 dimensions {
-    I:"Deimos Dimension"=-40
-    I:"Diona Dimension"=-6
-    I:"Fronos Dimension"=-10
-    I:"Kapteyn B Dimension"=-11
-    I:"Koentus Dimension"=-7
-    I:"Mercury Dimension"=-20
-    I:"Nibiru Dimension"=-9
-    I:"Phobos Dimension"=-41
-    I:"Pluto Dimension"=-22
-    I:"Polongnius Dimension"=-8
-    I:"Sirius B Dimension"=-12
-    I:"Space Station Dimension"=-160
-    I:"Static Space Station Dimension"=-161
-    I:"Venus Dimension"=-21
+    I:"Dark Asteroids Dimension"=-2554
+    I:"Deimos Dimension"=-200
+    I:"Diona Dimension"=-201
+    I:"Fronos Dimension"=-202
+    I:"Jupiter Dimension"=-5000
+    I:"Jupiter Space Station Dimension"=-2600
+    I:"Jupiter Static Space Station Dimension"=-2601
+    I:"Kapteyn B Dimension"=-203
+    I:"Koentus Dimension"=-204
+    I:"Mars Space Station Dimension"=-2602
+    I:"Mars Static Space Station Dimension"=-2603
+    I:"Mercury Dimension"=-205
+    I:"Nibiru Dimension"=-206
+    I:"Phobos Dimension"=-207
+    I:"Pluto Dimension"=-208
+    I:"Polongnius Dimension"=-209
+    I:"Sirius B Dimension"=-210
+    I:"Space Station Dimension"=-211
+    I:"Static Space Station Dimension"=-212
+    I:"Venus Dimension"=-213
 }
 
 
 general {
     # If set this to true. Overworld mobs and creatures will be spawning on Fronos by default, but this will disable Galacticraft evolved mob spawning. Default is false.
     B:"Allow Overworld Mobs/Creatures Spawning on Fronos Planet"=false
+
+    # If you disable this option. When you mining any blocks on the Nibiru you will getting Infected Gas. and Infected Gas does not affected when equipped Purple Crystal Armor. Default is false.
+    B:"Disable Infected Gas on Nibiru"=false
     B:"Disable Koentus Village Gen"=false
 
     # If set this to false. Candy Tools, Candy Bow and Poison Arrow can crafted by any candy cane. Default is true.
     B:"Disable Multiple Candy Tools Recipe"=true
     B:"Enable Client Version Check"=true
     B:"Enable Debug Log"=false
-
-    # If set this to false. Mercury, Venus etc. its will disabled from Celestial Screen and cannot reach that planets. Default is true.
     B:"Enable More Planets basic planets"=true
     B:"Enable New Main Manu Screen"=true
 
@@ -60,6 +69,7 @@ general {
 
     # If true, Thai Flag and Thai Canvas will show in the creative tabs.
     B:"Enable Thai Flag and Thai Canvas"=false
+    B:"Enable Version Check"=true
 }
 
 
@@ -75,11 +85,25 @@ gui {
 }
 
 
+moons {
+    B:"Enable Deimos Moon"=true
+    B:"Enable Phobos Moon"=true
+}
+
+
+planets {
+    B:"Enable Jupiter Planet"=true
+    B:"Enable Mercury Planet"=true
+    B:"Enable Pluto Planet"=true
+    B:"Enable Venus Planet"=true
+}
+
+
 potions {
-    I:Chemical=71
-    I:EMP=72
-    I:"Icy Poison"=73
-    I:"Infected Gas"=70
+    I:Chemical=61
+    I:EMP=62
+    I:"Icy Poison"=63
+    I:"Infected Gas"=60
 }
 
 
@@ -92,6 +116,13 @@ schematics {
     I:"Schematic Tier 6 Rocket No Flag"=789
     I:"Schematic Tier 7 Rocket"=790
     I:"Schematic Tier 8 Rocket"=791
+}
+
+
+"space stations" {
+    # If you disable Jupiter and enable the Jupiter Space Station. The game will get crashes!
+    B:"Enable Jupiter Space Station"=true
+    B:"Enable Mars Space Station"=true
 }
 
 
