--- a/config/enderio/EnderIO.cfg
+++ b/config/enderio/EnderIO.cfg
@@ -398,8 +398,8 @@ enchantmentsoulboundweight {
         Thaumcraft:ItemHoeElemental
         Thaumcraft:ItemHoeVoid
         ThermalExpansion:tool.hoeInvar
-		RotaryCraft:rotarycraft_item_steelhoe
-		RotaryCraft:rotarycraft_item_bedhoe
+        RotaryCraft:rotarycraft_item_steelhoe
+        RotaryCraft:rotarycraft_item_bedhoe
      >
 
     # This setting controls whether mana beans from Thaumcraft can be harvested by the farm.
@@ -440,6 +440,12 @@ inventorypanel {
 "item enabling" {
     # Allows ME conduits. Only has an effect with AE2 installed. [default: true]
     B:enableMEConduits=true
+
+    # Allows OC conduits. Only has an effect with OpenComputers installed. [default: true]
+    B:enableOCConduits=true
+
+    # Use the animated texture for OC conduits. [default: true]
+    B:enableOCConduitsAnimatedTexture=true
 
     # If true, gas conduits will be enabled if the Mekanism Gas API is found. False to forcibly disable. [default: true]
     B:gasConduitEnabled=true
