--- a/config/fastcraft.ini
+++ b/config/fastcraft.ini
@@ -1,5 +1,5 @@
 ; FastCraft config
-; created Nov 22, 2015 8:54:27 PM
+; created Nov 23, 2015 11:28:20 AM
 ;---
 
 ; Settings purely affecting performance, but not gameplay.
