--- a/config/microblocks.cfg
+++ b/config/microblocks.cfg
@@ -3,3 +3,41 @@
 #<name> is the unlocalised name or registry key of the block/item enclosed in quotes. NEI can help you find these
 #<meta> may be ommitted, in which case it defaults to 0, otherwise it can be a number, a comma separated list of numbers, or a dash separated range
 #Ex. "dirt" "minecraft:planks":3 "iron_ore":1,2,3,5 "ThermalFoundation:Storage":0-15
+
+#Ztones
+"Ztones:stoneTile"
+"Ztones:auroraBlock"
+"Ztones:tile.agonBlock":0-15
+"Ztones:tile.bittBlock":0-15
+"Ztones:tile.crayBlock":0-15
+"Ztones:tile.fortBlock":0-15
+"Ztones:tile.iszmBlock":0-15
+"Ztones:tile.jeltBlock":0-15
+"Ztones:tile.korpBlock":0-15
+"Ztones:tile.krypBlock":0-15
+"Ztones:tile.lairBlock":0-15
+"Ztones:tile.laveBlock":0-15
+"Ztones:tile.mintBlock":0-15
+"Ztones:tile.mystBlock":0-15
+"Ztones:tile.redsBlock":0-15
+"Ztones:tile.roenBlock":0-15
+"Ztones:tile.solsBlock":0-15
+"Ztones:tile.tankBlock":0-15
+"Ztones:tile.vectBlock":0-15
+"Ztones:tile.venaBlock":0-15
+"Ztones:tile.zechBlock":0-15
+"Ztones:tile.zionBlock":0-15
+"Ztones:tile.zomeBlock":0-15
+"Ztones:tile.zoneBlock":0-15
+"Ztones:tile.zorgBlock":0-15
+"Ztones:tile.reedBlock":0-15
+"Ztones:tile.syncBlock":0-15
+"Ztones:tile.zkulBlock":0-15
+"Ztones:tile.ztylBlock":0-15
+"Ztones:tile.glaxx":0-15
+"Ztones:tile.azurBlock":0-15
+"Ztones:tile.zetaBlock":0-15
+"Ztones:tile.zaneBlock":0-15
+"Ztones:tile.zestBlock":0-15
+"Ztones:tile.zythBlock":0-15
+"Ztones:tile.zoeaBlock":0-15
