--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -7,6 +7,9 @@ general {
     # Set this to false to disable the 1.9 Ender features available as recipes. This only disables the recipes and entries. Old ones that are already in the world will stay.
     B:19enderStuff.enabled=true
 
+    # Set this to false to disable custom armor models.
+    B:armorModels.enable=true
+
     # Set this to false to disable rendering of baubles in the player.
     B:baubleRender.enabled=true
 
@@ -91,6 +94,9 @@ general {
 
     # Set this to false to disable the use of shaders for some of the mod's renders.
     B:shaders.enabled=true
+
+    # The GL Texture Unit to use for the secondary sampler passed in to the Lexica Botania's category button shader. DO NOT TOUCH THIS IF YOU DON'T KNOW WHAT YOU'RE DOING
+    I:shaders.secondaryUnit=7
 
     # Do not ever touch this value if not asked to. Possible symptoms of doing so include your head turning backwards, the appearance of Titans near the walls or you being trapped in a game of Sword Art Online.
     I:spreader.posShift=1
@@ -360,6 +366,60 @@ shedding {
     I:Forestry.butterflyGE.lexiconDisplaySize=40
     I:Forestry.butterflyGE.metadata=0
     I:Forestry.butterflyGE.rate=-1
+
+    # Configuration of Shedding for GalacticraftCore.AlienVillager
+    S:GalacticraftCore.AlienVillager.item=
+    I:GalacticraftCore.AlienVillager.lexiconDisplaySize=40
+    I:GalacticraftCore.AlienVillager.metadata=0
+    I:GalacticraftCore.AlienVillager.rate=-1
+
+    # Configuration of Shedding for GalacticraftCore.EvolvedCreeper
+    S:GalacticraftCore.EvolvedCreeper.item=
+    I:GalacticraftCore.EvolvedCreeper.lexiconDisplaySize=40
+    I:GalacticraftCore.EvolvedCreeper.metadata=0
+    I:GalacticraftCore.EvolvedCreeper.rate=-1
+
+    # Configuration of Shedding for GalacticraftCore.EvolvedSkeleton
+    S:GalacticraftCore.EvolvedSkeleton.item=
+    I:GalacticraftCore.EvolvedSkeleton.lexiconDisplaySize=40
+    I:GalacticraftCore.EvolvedSkeleton.metadata=0
+    I:GalacticraftCore.EvolvedSkeleton.rate=-1
+
+    # Configuration of Shedding for GalacticraftCore.EvolvedSkeletonBoss
+    S:GalacticraftCore.EvolvedSkeletonBoss.item=
+    I:GalacticraftCore.EvolvedSkeletonBoss.lexiconDisplaySize=40
+    I:GalacticraftCore.EvolvedSkeletonBoss.metadata=0
+    I:GalacticraftCore.EvolvedSkeletonBoss.rate=-1
+
+    # Configuration of Shedding for GalacticraftCore.EvolvedSpider
+    S:GalacticraftCore.EvolvedSpider.item=
+    I:GalacticraftCore.EvolvedSpider.lexiconDisplaySize=40
+    I:GalacticraftCore.EvolvedSpider.metadata=0
+    I:GalacticraftCore.EvolvedSpider.rate=-1
+
+    # Configuration of Shedding for GalacticraftCore.EvolvedZombie
+    S:GalacticraftCore.EvolvedZombie.item=
+    I:GalacticraftCore.EvolvedZombie.lexiconDisplaySize=40
+    I:GalacticraftCore.EvolvedZombie.metadata=0
+    I:GalacticraftCore.EvolvedZombie.rate=-1
+
+    # Configuration of Shedding for GalacticraftMars.CreeperBoss
+    S:GalacticraftMars.CreeperBoss.item=
+    I:GalacticraftMars.CreeperBoss.lexiconDisplaySize=40
+    I:GalacticraftMars.CreeperBoss.metadata=0
+    I:GalacticraftMars.CreeperBoss.rate=-1
+
+    # Configuration of Shedding for GalacticraftMars.Slimeling
+    S:GalacticraftMars.Slimeling.item=
+    I:GalacticraftMars.Slimeling.lexiconDisplaySize=40
+    I:GalacticraftMars.Slimeling.metadata=0
+    I:GalacticraftMars.Slimeling.rate=-1
+
+    # Configuration of Shedding for GalacticraftMars.Sludgeling
+    S:GalacticraftMars.Sludgeling.item=
+    I:GalacticraftMars.Sludgeling.lexiconDisplaySize=40
+    I:GalacticraftMars.Sludgeling.metadata=0
+    I:GalacticraftMars.Sludgeling.rate=-1
 
     # Configuration of Shedding for Ghast
     S:Ghast.item=minecraft:ghast_tear
@@ -835,6 +895,12 @@ shedding {
     I:MorePlanet.EvolvedSiriusBlazeBoss.metadata=0
     I:MorePlanet.EvolvedSiriusBlazeBoss.rate=-1
 
+    # Configuration of Shedding for MorePlanet.EvolvedWitch
+    S:MorePlanet.EvolvedWitch.item=
+    I:MorePlanet.EvolvedWitch.lexiconDisplaySize=40
+    I:MorePlanet.EvolvedWitch.metadata=0
+    I:MorePlanet.EvolvedWitch.rate=-1
+
     # Configuration of Shedding for MorePlanet.FronosBossTemp
     S:MorePlanet.FronosBossTemp.item=
     I:MorePlanet.FronosBossTemp.lexiconDisplaySize=40
@@ -992,6 +1058,60 @@ shedding {
     I:MushroomCow.lexiconDisplaySize=40
     I:MushroomCow.metadata=0
     I:MushroomCow.rate=-1
+
+    # Configuration of Shedding for MutantCreatures.CreeperMinion
+    S:MutantCreatures.CreeperMinion.item=
+    I:MutantCreatures.CreeperMinion.lexiconDisplaySize=40
+    I:MutantCreatures.CreeperMinion.metadata=0
+    I:MutantCreatures.CreeperMinion.rate=-1
+
+    # Configuration of Shedding for MutantCreatures.EndermanClone
+    S:MutantCreatures.EndermanClone.item=
+    I:MutantCreatures.EndermanClone.lexiconDisplaySize=40
+    I:MutantCreatures.EndermanClone.metadata=0
+    I:MutantCreatures.EndermanClone.rate=-1
+
+    # Configuration of Shedding for MutantCreatures.MutantCreeper
+    S:MutantCreatures.MutantCreeper.item=
+    I:MutantCreatures.MutantCreeper.lexiconDisplaySize=40
+    I:MutantCreatures.MutantCreeper.metadata=0
+    I:MutantCreatures.MutantCreeper.rate=-1
+
+    # Configuration of Shedding for MutantCreatures.MutantEnderman
+    S:MutantCreatures.MutantEnderman.item=
+    I:MutantCreatures.MutantEnderman.lexiconDisplaySize=40
+    I:MutantCreatures.MutantEnderman.metadata=0
+    I:MutantCreatures.MutantEnderman.rate=-1
+
+    # Configuration of Shedding for MutantCreatures.MutantSkeleton
+    S:MutantCreatures.MutantSkeleton.item=
+    I:MutantCreatures.MutantSkeleton.lexiconDisplaySize=40
+    I:MutantCreatures.MutantSkeleton.metadata=0
+    I:MutantCreatures.MutantSkeleton.rate=-1
+
+    # Configuration of Shedding for MutantCreatures.MutantSnowGolem
+    S:MutantCreatures.MutantSnowGolem.item=
+    I:MutantCreatures.MutantSnowGolem.lexiconDisplaySize=40
+    I:MutantCreatures.MutantSnowGolem.metadata=0
+    I:MutantCreatures.MutantSnowGolem.rate=-1
+
+    # Configuration of Shedding for MutantCreatures.MutantZombie
+    S:MutantCreatures.MutantZombie.item=
+    I:MutantCreatures.MutantZombie.lexiconDisplaySize=40
+    I:MutantCreatures.MutantZombie.metadata=0
+    I:MutantCreatures.MutantZombie.rate=-1
+
+    # Configuration of Shedding for MutantCreatures.SpiderPig
+    S:MutantCreatures.SpiderPig.item=
+    I:MutantCreatures.SpiderPig.lexiconDisplaySize=40
+    I:MutantCreatures.SpiderPig.metadata=0
+    I:MutantCreatures.SpiderPig.rate=-1
+
+    # Configuration of Shedding for MutantCreatures.ZombieMinion
+    S:MutantCreatures.ZombieMinion.item=
+    I:MutantCreatures.ZombieMinion.lexiconDisplaySize=40
+    I:MutantCreatures.ZombieMinion.metadata=0
+    I:MutantCreatures.ZombieMinion.rate=-1
     S:Natura.FlameSpider.item=
     I:Natura.FlameSpider.lexiconDisplaySize=40
     I:Natura.FlameSpider.metadata=0
@@ -2134,6 +2254,12 @@ shedding {
     I:jurassicraft.velociraptor.lexiconDisplaySize=40
     I:jurassicraft.velociraptor.metadata=0
     I:jurassicraft.velociraptor.rate=-1
+
+    # Configuration of Shedding for lootablebodies_EntityLootableBody
+    S:lootablebodies_EntityLootableBody.item=
+    I:lootablebodies_EntityLootableBody.lexiconDisplaySize=40
+    I:lootablebodies_EntityLootableBody.metadata=0
+    I:lootablebodies_EntityLootableBody.rate=-1
     S:mad_scientist.item=
     I:mad_scientist.lexiconDisplaySize=40
     I:mad_scientist.metadata=0
