--- a/config/Waila.cfg
+++ b/config/Waila.cfg
@@ -30,6 +30,8 @@ general {
 ##########################################################################################################
 
 modules {
+    B:DSU=true
+    B:"Extra Utilities"=true
     B:ExtraUtilities=true
     B:Forestry=true
     B:"Forestry:apiary"=true
@@ -39,6 +41,8 @@ modules {
     B:"Forestry:sapling"=true
     B:Forge=true
     B:HQM.showQDS=true
+    B:IFluidHandler=true
+    B:"Pam's Fruit"=true
     B:Railcraft=true
     B:"Railcraft:charge"=true
     B:"Railcraft:energy"=true
@@ -115,6 +119,8 @@ modules {
 ##########################################################################################################
 
 server_forcing {
+    B:DSU=false
+    B:"Extra Utilities"=false
     B:ExtraUtilities=false
     B:Forestry=false
     B:"Forestry:apiary"=false
@@ -124,6 +130,8 @@ server_forcing {
     B:"Forestry:sapling"=false
     B:Forge=false
     B:HQM.showQDS=false
+    B:IFluidHandler=false
+    B:"Pam's Fruit"=false
     B:Railcraft=false
     B:"Railcraft:charge"=false
     B:"Railcraft:energy"=false
