--- a/config/bettersleeping.cfg
+++ b/config/bettersleeping.cfg
@@ -1,6 +1,9 @@
 # Configuration file
 
 config {
+    # cap energy bar on the maximum allowed value [default: false]
+    B:capEnergyBar=false
+
     # chance to get bad morning debuffs [range: 0.0 ~ 1.0, default: 0.3]
     S:chanceToGetBadNight=0.3
 
@@ -75,6 +78,9 @@ config {
 
     # How much tiredness is added when the player jumps [range: 0 ~ 23999, default: 8]
     I:tirednessJump=11
+
+    # wake up when the first person's energy fills up [default: false]
+    B:wakeUpWithFirstPerson=false
 
     caffeine {
         # At which level you get nausea from caffeine [range: 0 ~ 23999, default: 50]
