--- a/config/bigtrees/biomegroups.cfg
+++ b/config/bigtrees/biomegroups.cfg
@@ -633,6 +633,11 @@
      >
 
     # overrides above groups
+    S:"DEAD AND HOT" <
+        stevekung.Mercury
+     >
+
+    # overrides above groups
     S:"DEAD AND SPOOKY" <
         biomesoplenty.Silkglades
         biomesoplenty.Ominous Woods
@@ -1959,6 +1964,37 @@
     S:"DEAD AND DRY Tall Oak Autumn"=
     S:"DEAD AND DRY Tall Oak Brown"=
     S:"DEAD AND DRY Yellow Big Birch"=
+    S:"DEAD AND HOT Big Birch 0"=
+    S:"DEAD AND HOT Big Birch 1"=
+    S:"DEAD AND HOT Big Pine 0"=
+    S:"DEAD AND HOT Big Pine 1"=
+    S:"DEAD AND HOT Block Maple"=
+    S:"DEAD AND HOT Block Oak 0"=
+    S:"DEAD AND HOT Block Oak Autumn"=
+    S:"DEAD AND HOT Block Oak Brown"=
+    S:"DEAD AND HOT Block Oak Dark"=
+    S:"DEAD AND HOT Cyprus Oak 0"=
+    S:"DEAD AND HOT Cyprus Willow"=
+    S:"DEAD AND HOT Dark Hat"=
+    S:"DEAD AND HOT Dead Tree 0"=
+    S:"DEAD AND HOT Great Oak 0"=
+    S:"DEAD AND HOT Great Oak Autumn"=
+    S:"DEAD AND HOT Great Oak Brown"=
+    S:"DEAD AND HOT Great Oak Dark"=
+    S:"DEAD AND HOT Hat Sacred Tree"=
+    S:"DEAD AND HOT Hat Tree 0"=
+    S:"DEAD AND HOT Pertrified Dead Tree"=
+    S:"DEAD AND HOT Swamp Oak 0"=
+    S:"DEAD AND HOT Tall Cherry"=
+    S:"DEAD AND HOT Tall Dark Oak"=
+    S:"DEAD AND HOT Tall Fir"=
+    S:"DEAD AND HOT Tall Jacaranda"=
+    S:"DEAD AND HOT Tall Magic Tree"=
+    S:"DEAD AND HOT Tall Maple"=
+    S:"DEAD AND HOT Tall Oak 0"=
+    S:"DEAD AND HOT Tall Oak Autumn"=
+    S:"DEAD AND HOT Tall Oak Brown"=
+    S:"DEAD AND HOT Yellow Big Birch"=
     S:"DEAD AND SPOOKY Big Birch 0"=
     S:"DEAD AND SPOOKY Big Birch 1"=
     S:"DEAD AND SPOOKY Big Pine 0"=
