--- a/config/LaunchGui.cfg
+++ b/config/LaunchGui.cfg
@@ -46,7 +46,7 @@ notice {
 
     button {
         # Text to display on info button [default: Information]
-        S:infoButtonText=Revolution: Revolution Info
+        S:infoButtonText=Revolution Website
 
         # URL that the info button sends you to [default: http://tehnut.info]
         S:infoButtonUrl=http://bit.ly/1CLRfNc
