--- a/config/MorePlanet's/core.cfg
+++ b/config/MorePlanet's/core.cfg
@@ -70,6 +70,9 @@ general {
     # If true, Thai Flag and Thai Canvas will show in the creative tabs.
     B:"Enable Thai Flag and Thai Canvas"=false
     B:"Enable Version Check"=true
+
+    # Put your home planet name to survival on that planet. For example : planet.fronos, Default is : "planet."
+    S:"Home Planet Name"=planet.
 }
 
 
