--- a/config/fastcraft.ini
+++ b/config/fastcraft.ini
@@ -1,5 +1,5 @@
 ; FastCraft config
-; created Nov 23, 2015 11:55:54 AM
+; created Nov 23, 2015 12:10:24 PM
 ;---
 
 ; Settings purely affecting performance, but not gameplay.
