Major mod changes

--- a/config/bcadditions.cfg
+++ b/config/bcadditions.cfg
@@ -31,7 +31,7 @@ feature {
     B:ColorSorter=true
     B:ColoringTool=true
     B:Duster=true
-    B:FluidCanisters=true
+    B:FluidCanisters=false
     B:HeatedFurnace=true
     B:KineticBackpack=true
     B:KineticEnergyBuffer=true
