--- a/config/wailaplugins.cfg
+++ b/config/wailaplugins.cfg
@@ -19,15 +19,15 @@ blood_magic {
 
 
 plugins {
-    B:AWWayofTime=true
+    B:AWWayofTime=false
     B:DSU=true
     B:"Extra Utilities"=true
     B:ExtraUtilities=true
-    B:Forestry=true
+    B:Forestry=false
     B:Forge=true
     B:IFluidHandler=true
     B:Mekanism=false
-    B:MineFactoryReloaded=true
+    B:MineFactoryReloaded=false
     B:"Pam's Fruit"=true
     B:Railcraft=true
     B:RedLogic=false
