--- a/config/iChunUtil.cfg
+++ b/config/iChunUtil.cfg
@@ -1,6 +1,16 @@
 # Configuration file
 
+##########################################################################################################
+# patreon
+#--------------------------------------------------------------------------------------------------------#
+# Patreon related configs.
+##########################################################################################################
+
 patreon {
+    # Do you want to show your patron reward to other players?
+    # 
+    # Min: 0
+    # Max: 1
     I:showPatronReward=1
 }
 
