Configs for new mods added (RIM, Formivore, COG)

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -7556,6 +7556,12 @@ jabba {
 }
 
 
+jakjredstoneinmotion {
+    B:simpleFrame=false
+    B:tileJAKJRedstoneInMotionRailSpecter=false
+}
+
+
 jurassicraft {
     B:tileamberore=true
     B:tileblockGypsumBlock=true
