--- a/config/IguanaTinkerTweaks/BlockDefaults.cfg
+++ b/config/IguanaTinkerTweaks/BlockDefaults.cfg
@@ -554,6 +554,22 @@ blocks_axe {
     I:"JABBA:barrel:7"=1
     I:"JABBA:barrel:8"=1
     I:"JABBA:barrel:9"=1
+    I:"JAKJ_RedstoneInMotion:tile.JAKJ_RedstoneInMotion_Carriage:0"=0
+    I:"JAKJ_RedstoneInMotion:tile.JAKJ_RedstoneInMotion_Carriage:1"=0
+    I:"JAKJ_RedstoneInMotion:tile.JAKJ_RedstoneInMotion_Carriage:10"=0
+    I:"JAKJ_RedstoneInMotion:tile.JAKJ_RedstoneInMotion_Carriage:11"=0
+    I:"JAKJ_RedstoneInMotion:tile.JAKJ_RedstoneInMotion_Carriage:12"=0
+    I:"JAKJ_RedstoneInMotion:tile.JAKJ_RedstoneInMotion_Carriage:13"=0
+    I:"JAKJ_RedstoneInMotion:tile.JAKJ_RedstoneInMotion_Carriage:14"=0
+    I:"JAKJ_RedstoneInMotion:tile.JAKJ_RedstoneInMotion_Carriage:15"=0
+    I:"JAKJ_RedstoneInMotion:tile.JAKJ_RedstoneInMotion_Carriage:2"=0
+    I:"JAKJ_RedstoneInMotion:tile.JAKJ_RedstoneInMotion_Carriage:3"=0
+    I:"JAKJ_RedstoneInMotion:tile.JAKJ_RedstoneInMotion_Carriage:4"=0
+    I:"JAKJ_RedstoneInMotion:tile.JAKJ_RedstoneInMotion_Carriage:5"=0
+    I:"JAKJ_RedstoneInMotion:tile.JAKJ_RedstoneInMotion_Carriage:6"=0
+    I:"JAKJ_RedstoneInMotion:tile.JAKJ_RedstoneInMotion_Carriage:7"=0
+    I:"JAKJ_RedstoneInMotion:tile.JAKJ_RedstoneInMotion_Carriage:8"=0
+    I:"JAKJ_RedstoneInMotion:tile.JAKJ_RedstoneInMotion_Carriage:9"=0
     I:"MorePlanet:alien_log:0"=0
     I:"MorePlanet:alien_log:1"=0
     I:"MorePlanet:alien_log:10"=0
@@ -3022,6 +3038,22 @@ blocks_pickaxe {
     I:"ImmersiveEngineering:storage:7"=3
     I:"ImmersiveEngineering:storage:8"=2
     I:"ImmersiveEngineering:storage:9"=2
+    I:"JAKJ_RedstoneInMotion:tile.JAKJ_RedstoneInMotion_CarriageDrive:0"=0
+    I:"JAKJ_RedstoneInMotion:tile.JAKJ_RedstoneInMotion_CarriageDrive:1"=0
+    I:"JAKJ_RedstoneInMotion:tile.JAKJ_RedstoneInMotion_CarriageDrive:10"=0
+    I:"JAKJ_RedstoneInMotion:tile.JAKJ_RedstoneInMotion_CarriageDrive:11"=0
+    I:"JAKJ_RedstoneInMotion:tile.JAKJ_RedstoneInMotion_CarriageDrive:12"=0
+    I:"JAKJ_RedstoneInMotion:tile.JAKJ_RedstoneInMotion_CarriageDrive:13"=0
+    I:"JAKJ_RedstoneInMotion:tile.JAKJ_RedstoneInMotion_CarriageDrive:14"=0
+    I:"JAKJ_RedstoneInMotion:tile.JAKJ_RedstoneInMotion_CarriageDrive:15"=0
+    I:"JAKJ_RedstoneInMotion:tile.JAKJ_RedstoneInMotion_CarriageDrive:2"=0
+    I:"JAKJ_RedstoneInMotion:tile.JAKJ_RedstoneInMotion_CarriageDrive:3"=0
+    I:"JAKJ_RedstoneInMotion:tile.JAKJ_RedstoneInMotion_CarriageDrive:4"=0
+    I:"JAKJ_RedstoneInMotion:tile.JAKJ_RedstoneInMotion_CarriageDrive:5"=0
+    I:"JAKJ_RedstoneInMotion:tile.JAKJ_RedstoneInMotion_CarriageDrive:6"=0
+    I:"JAKJ_RedstoneInMotion:tile.JAKJ_RedstoneInMotion_CarriageDrive:7"=0
+    I:"JAKJ_RedstoneInMotion:tile.JAKJ_RedstoneInMotion_CarriageDrive:8"=0
+    I:"JAKJ_RedstoneInMotion:tile.JAKJ_RedstoneInMotion_CarriageDrive:9"=0
     I:"Mekanism:BasicBlock:0"=3
     I:"Mekanism:BasicBlock:12"=1
     I:"Mekanism:BasicBlock:13"=3
