Remove recurrent complex plus files that shouldn't be in repo

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,8 @@ servers.dat
 usercache.json
 **/iChunUtil.cfg
 **/InvTweaks.cfg
+**/InvTweaksRules.txt
+**/InvTweaksTree.txt
 **/splash.properties
 
 
