--- a/config/reccomplex.cfg
+++ b/config/reccomplex.cfg
@@ -26,7 +26,7 @@ balancing {
     S:minDistToSpawnForGeneration=30.0
 
     # Resource Expression that will be applied to each loading structure, determining if it should be set to 'active'. [default: ]
-    S:structureGenerationMatcher=
+    S:structureGenerationMatcher="!$reccomplex"
 
     # Resource Expression that will be applied to each loading structure, determining if it should be loaded. [default: ]
     S:structureLoadMatcher=
