--- a/config/RTG/rtg.cfg
+++ b/config/RTG/rtg.cfg
@@ -80,31 +80,31 @@ mineshafts {
 
 "ore gen" {
     #  [default: true]
-    B:"Generate Coal Ore"=true
+    B:"Generate Coal Ore"=false
 
     #  [default: true]
-    B:"Generate Diamond Ore"=true
+    B:"Generate Diamond Ore"=false
 
     #  [default: true]
-    B:"Generate Emerald Ore"=true
+    B:"Generate Emerald Ore"=false
 
     #  [default: true]
-    B:"Generate Gold Ore"=true
+    B:"Generate Gold Ore"=false
 
     #  [default: true]
-    B:"Generate Iron Ore"=true
+    B:"Generate Iron Ore"=false
 
     #  [default: true]
-    B:"Generate Lapis Lazuli Ore"=true
+    B:"Generate Lapis Lazuli Ore"=false
 
     #  [default: true]
-    B:"Generate Redstone Ore"=true
+    B:"Generate Redstone Ore"=false
 }
 
 
 "scattered features" {
     #  [default: true]
-    B:"Generate Scattered Features"=true
+    B:"Generate Scattered Features"=false
 
     # Scattered features = desert temples, jungle temples, and witch huts. [range: 1 ~ 2147483647, default: 32]
     I:"Maximum distance between scattered features"=32
@@ -148,7 +148,7 @@ villages {
     B:"Generate Villages"=true
 
     # Lower values = villages closer together; 32 = Vanilla [range: 1 ~ 2147483647, default: 32]
-    I:"Maximum distance between villages"=32
+    I:"Maximum distance between villages"=16
 
     # Higher values = villages further apart; 8 = Vanilla [range: 1 ~ 2147483647, default: 8]
     I:"Minimum distance between villages"=8
