Ore gen changes; special AI fixes; mekanism uses default osmium spawning

--- a/config/ImmersiveEngineering.cfg
+++ b/config/ImmersiveEngineering.cfg
@@ -2,7 +2,7 @@
 
 compatability {
     # Set this to false to disable IE's built in compatability with BackTools
-    B:"Enable Compatmodule: BackTools"=true
+    B:"Enable Compatmodule: BackTools"=false
 
     # Set this to false to disable IE's built in compatability with Botania
     B:"Enable Compatmodule: Botania"=true
@@ -11,7 +11,7 @@ compatability {
     B:"Enable Compatmodule: CarpentersBlocks"=true
 
     # Set this to false to disable IE's built in compatability with EE3
-    B:"Enable Compatmodule: EE3"=true
+    B:"Enable Compatmodule: EE3"=false
 
     # Set this to false to disable IE's built in compatability with EnderIO
     B:"Enable Compatmodule: EnderIO"=true
@@ -26,19 +26,19 @@ compatability {
     B:"Enable Compatmodule: ForgeMicroblock"=true
 
     # Set this to false to disable IE's built in compatability with HydCraft
-    B:"Enable Compatmodule: HydCraft"=true
+    B:"Enable Compatmodule: HydCraft"=false
 
     # Set this to false to disable IE's built in compatability with MineFactoryReloaded
-    B:"Enable Compatmodule: MineFactoryReloaded"=true
+    B:"Enable Compatmodule: MineFactoryReloaded"=false
 
     # Set this to false to disable IE's built in compatability with MineTweaker3
     B:"Enable Compatmodule: MineTweaker3"=true
 
     # Set this to false to disable IE's built in compatability with ThermalDynamics
-    B:"Enable Compatmodule: ThermalDynamics"=true
+    B:"Enable Compatmodule: ThermalDynamics"=false
 
     # Set this to false to disable IE's built in compatability with ThermalExpansion
-    B:"Enable Compatmodule: ThermalExpansion"=true
+    B:"Enable Compatmodule: ThermalExpansion"=false
 
     # Set this to false to disable IE's built in compatability with ThermalFoundation
     B:"Enable Compatmodule: ThermalFoundation"=true
@@ -50,19 +50,19 @@ compatability {
     B:"Enable Compatmodule: chisel"=true
 
     # Set this to false to disable IE's built in compatability with denseores
-    B:"Enable Compatmodule: denseores"=true
+    B:"Enable Compatmodule: denseores"=false
 
     # Set this to false to disable IE's built in compatability with etfuturum
-    B:"Enable Compatmodule: etfuturum"=true
+    B:"Enable Compatmodule: etfuturum"=false
 
     # Set this to false to disable IE's built in compatability with gregtech
-    B:"Enable Compatmodule: gregtech"=true
+    B:"Enable Compatmodule: gregtech"=false
 
     # Set this to false to disable IE's built in compatability with harvestcraft
     B:"Enable Compatmodule: harvestcraft"=true
 
     # Set this to false to disable IE's built in compatability with steamcraft2
-    B:"Enable Compatmodule: steamcraft2"=true
+    B:"Enable Compatmodule: steamcraft2"=false
 }
 
 
@@ -99,7 +99,7 @@ general {
     I:"Cable transfer rates" <
         256
         1024
-        4096
+        2048
         0
         0
      >
