--- a/config/headcrumbs.cfg
+++ b/config/headcrumbs.cfg
@@ -284,6 +284,7 @@ heads {
         Demosthenexx
         brokescience
 		AngieTheDemoness
+        waterlubber
      >
     S:technic <
         GenPage
