--- a/config/AppliedEnergistics2/AppliedEnergistics2.cfg
+++ b/config/AppliedEnergistics2/AppliedEnergistics2.cfg
@@ -296,6 +296,7 @@ modintegration {
 ##########################################################################################################
 
 orecamouflage {
+    # OreDictionary Names: dustEnder,dustEnderPearl
     B:EnderDust=true
 
     # OreDictionary Names: dustGold
