--- a/config/rftools/dimlets.cfg
+++ b/config/rftools/dimlets.cfg
@@ -114,6 +114,8 @@ dimletsettings {
     I:rarity.Material.tile.blockLapis=4
     I:rarity.Material.tile.blockRedstone=4
     I:rarity.Material.tile.dimensionalShardBlock=4
+    I:rarity.Material.tile.gcBlockCore7=3
+    I:rarity.Material.tile.gcBlockCore8=3
     I:rarity.Material.tile.gemOre10=3
     I:rarity.Material.tile.gemOre12=3
     I:rarity.Material.tile.gemOre14=3
@@ -123,6 +125,7 @@ dimletsettings {
     I:rarity.Material.tile.gemOre8=3
     I:rarity.Material.tile.glass=2
     I:rarity.Material.tile.lightgem=4
+    I:rarity.Material.tile.moonBlock2=3
     I:rarity.Material.tile.netherquartz=3
     I:rarity.Material.tile.obsidian=4
     I:rarity.Material.tile.ore.berries.one=6
@@ -297,6 +300,8 @@ dimletsettings {
     I:rfcreate.Material.tile.blockLapis=16000
     I:rfcreate.Material.tile.blockRedstone=16000
     I:rfcreate.Material.tile.dimensionalShardBlock=15000
+    I:rfcreate.Material.tile.gcBlockCore7=8000
+    I:rfcreate.Material.tile.gcBlockCore8=8000
     I:rfcreate.Material.tile.gemOre10=12000
     I:rfcreate.Material.tile.gemOre12=12000
     I:rfcreate.Material.tile.gemOre14=12000
@@ -306,6 +311,7 @@ dimletsettings {
     I:rfcreate.Material.tile.gemOre8=12000
     I:rfcreate.Material.tile.glass=600
     I:rfcreate.Material.tile.lightgem=12000
+    I:rfcreate.Material.tile.moonBlock2=8000
     I:rfcreate.Material.tile.netherquartz=14000
     I:rfcreate.Material.tile.obsidian=25000
     I:rfcreate.Material.tile.ore.berries.one=123456
@@ -480,6 +486,8 @@ dimletsettings {
     I:rfmaintain.Material.tile.blockLapis=6000
     I:rfmaintain.Material.tile.blockRedstone=6000
     I:rfmaintain.Material.tile.dimensionalShardBlock=8000
+    I:rfmaintain.Material.tile.gcBlockCore7=4000
+    I:rfmaintain.Material.tile.gcBlockCore8=4000
     I:rfmaintain.Material.tile.gemOre10=2500
     I:rfmaintain.Material.tile.gemOre12=2500
     I:rfmaintain.Material.tile.gemOre14=2500
@@ -489,6 +497,7 @@ dimletsettings {
     I:rfmaintain.Material.tile.gemOre8=2500
     I:rfmaintain.Material.tile.glass=400
     I:rfmaintain.Material.tile.lightgem=6000
+    I:rfmaintain.Material.tile.moonBlock2=4000
     I:rfmaintain.Material.tile.netherquartz=6000
     I:rfmaintain.Material.tile.obsidian=10000
     I:rfmaintain.Material.tile.ore.berries.one=123456
@@ -662,6 +671,8 @@ dimletsettings {
     I:ticks.Material.tile.blockLapis=300
     I:ticks.Material.tile.blockRedstone=300
     I:ticks.Material.tile.dimensionalShardBlock=500
+    I:ticks.Material.tile.gcBlockCore7=700
+    I:ticks.Material.tile.gcBlockCore8=700
     I:ticks.Material.tile.gemOre10=400
     I:ticks.Material.tile.gemOre12=400
     I:ticks.Material.tile.gemOre14=400
@@ -671,6 +682,7 @@ dimletsettings {
     I:ticks.Material.tile.gemOre8=400
     I:ticks.Material.tile.glass=30
     I:ticks.Material.tile.lightgem=200
+    I:ticks.Material.tile.moonBlock2=700
     I:ticks.Material.tile.netherquartz=400
     I:ticks.Material.tile.obsidian=600
     I:ticks.Material.tile.ore.berries.one=123456
