--- a/config/rftools/main.cfg
+++ b/config/rftools/main.cfg
@@ -169,6 +169,9 @@ dimlets {
     # The chance for a dungeon to spawn in a chunk. Higher numbers mean less chance (1 in 'dungeonChance' chance)
     I:dungeonChance=200
 
+    # If this is enabled then a dimension editor can delete a dimension that is owned by the same player as the dimension editor's player. This works by sending over a block of TNT
+    B:editorCanDeleteDimensions=false
+
     # The chance that you get an unknown dimlet when killing an enderman. Set to 0 to disable
     D:endermanUnknownDimletDrop=0.009999999776482582
 
